CSP-6 #resolve #comment editing record will not reset form after save

--- a/src/appgroupassign.html
+++ b/src/appgroupassign.html
@@ -32,8 +32,8 @@
 						<div class="cH35">
 							&nbsp;
 						</div>
-						<button id="clearLists" class="cW75">Revert Changes</button>
-						<button id="save" class="cW75 cTM1">Save Changes</button>
+						<button id="clearLists" class="cW75">Revert</button>
+						<button id="save" class="cW75 cTM1">Save</button>
 					</div>
 				</div>
 				<div class="cLeft cW40 cH100" id="appsList"></div>
