--- a/src/appgroups.html
+++ b/src/appgroups.html
@@ -35,33 +35,30 @@
 							<br/>
 							<br/>
 							<div>
-								<div class="cLeft cW25 formLabel" align="right">
+								<div class="cLeft cW15 formLabel" align="right">
 									<strong>Name:&nbsp;</strong>
 								</div>
-								<div class="cLeft cW50">
-									<input type="text" class="" name="Name" value="" size="32" onkeyup="makeClearable()"/>
+								<div class="cLeft cW85">
+									<input type="text" class="cW98" name="Name" value="" onkeyup="makeClearable()"/>
 								</div>
 								<div class="cClear"><!--  --></div>
 							</div>
 							<div class="cTM1">
-								<div class="cLeft cW25 formLabel" align="right">
+								<div class="cLeft cW15 formLabel" align="right">
 									<strong>Description:&nbsp;</strong>
 								</div>
-								<div class="cLeft cW50">
-									<input type="text" class="" name="Description" value="" size="32" onkeyup="makeClearable()"/>
+								<div class="cLeft cW85">
+									<input type="text" class="cW98" name="Description" value="" onkeyup="makeClearable()"/>
 								</div>
 								<div class="cClear"><!--  --></div>
 							</div>
 							
 							<br/>
 							<br/>
-							<div class="cTM1">
-								<div class="cLeft cW75 " align="right">
-									<button id="clear">New Group</button>
-									<button id="delete">Delete Group</button>
-									<button id="save"><span id="saveLabel">Save Group</span></button>
-								</div>
-								<div class="cClear"><!--  --></div>
+							<div class="cTM1" align="right">
+								<button id="clear">New Group</button>
+								<button id="delete">Delete Group</button>
+								<button id="save"><span id="saveLabel">Save Group</span></button>
 							</div>
 						</div>
 					</div>
