moved required libs, html formatting, now separate

--- a/appgroupassign.html
+++ b/appgroupassign.html
@@ -5,22 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 		
 		<!-- Standard CSS -->
-		<link rel="stylesheet" href="../../themes/df-default/jquery-ui-1.9.1.custom.css" type="text/css" />
-		<link rel="stylesheet" href="../../css/layout.css" type="text/css" />
+		<link rel="stylesheet" href="css/themes/df-default/jquery-ui-1.9.1.custom.css" type="text/css" />
+		<link rel="stylesheet" href="css/layout.css" type="text/css" />
 		
-		<!-- jQuery Imports -->
-		<script src="../../jQuery/jquery-1.8.2.min.js"></script>
-		<script src="../../jQuery/jquery-ui-1.9.1.custom.min.js"></script>
-		<script src="../../jQuery/plugins/jquery.blockUI.js"></script>
-		
-		<!-- DF Imports -->
-		<script src="../../dfcore/dfio.js"></script>
-		<script src="../../dfcore/dferr.js"></script>
-		<script src="../../dfui/jquery.dfsearchwidget.js"></script>
-		
-		<!-- Initialize the system and start the application -->
-		<script src="js/appgroupassign.js"></script>
-		<script src="js/admin.js"></script>
+
 	</head>
 	<body>
 		<div id="main_content" align="left">
@@ -49,5 +37,17 @@
 				<span id="errorMsg"><!--  --></span>
 			</p>
 		</div>
+        <script src="/lib/web-core/js/jquery.js"></script>
+        <script src="/lib/web-core/js/jquery-ui-1.9.2.custom.min.js"></script>
+
+
+        <!-- DF Imports -->
+        <script src="/lib/web-core/js/df.js"></script>
+        <script src="/lib/web-core/js/df-err.js"></script>
+        <script src="js/jquery.dfsearchwidget.js"></script>
+
+        <!-- Initialize the system and start the application -->
+        <script src="js/appgroupassign.js"></script>
+        <script src="js/admin.js"></script>
 	</body>
 </html>
