--- a/roles.html
+++ b/roles.html
@@ -3,22 +3,10 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-		
-		<!-- jQuery Imports -->
-		<script src="../../jQuery/jquery-1.8.2.min.js"></script>
-		<script src="../../jQuery/jquery-ui-1.9.1.custom.min.js"></script>
-		<script src="../../jQuery/plugins/jquery.blockUI.js"></script>
-		
-		<!-- DF Imports -->
-		<link rel="stylesheet" href="../../themes/df-default/jquery-ui-1.9.1.custom.css" type="text/css" />
-		<link rel="stylesheet" href="../../css/layout.css" type="text/css" />
-		<script src="../../dfcore/dfio.js"></script>
-		<script src="../../dfcore/dferr.js"></script>
-		<script src="../../dfui/jquery.dfsearchwidget.js"></script>
-		
-		<!-- Initialize the system and start the application -->
-		<script src="js/admin.js"></script>
-		<script src="js/roles.js"></script>
+
+        <link rel="stylesheet" href="css/themes/df-default/jquery-ui-1.9.1.custom.css" type="text/css" />
+        <link rel="stylesheet" href="css/layout.css" type="text/css" />
+
 		
 	</head>
 	<body>
@@ -161,5 +149,17 @@
 				</p>
 			</div>
 		</div>
+        <script src="/lib/web-core/js/jquery.js"></script>
+        <script src="/lib/web-core/js/jquery-ui-1.9.2.custom.min.js"></script>
+
+
+        <!-- DF Imports -->
+        <script src="/lib/web-core/js/df.js"></script>
+        <script src="/lib/web-core/js/df-err.js"></script>
+        <script src="js/jquery.dfsearchwidget.js"></script>
+
+        <!-- Initialize the system and start the application -->
+        <script src="js/roles.js"></script>
+        <script src="js/admin.js"></script>
 	</body>
 </html>
