File manager clean up.

--- a/filemanager/index.html
+++ b/filemanager/index.html
@@ -18,12 +18,11 @@
 					<div class="cTM1" align="left">
 						<div id="browserControl">
 							<div class="cRight fmToolbar cRM1">
-								<span id="edit_tools">
-									<button id="cut">Cut</button><button id="copy">Copy</button><button id="paste">Paste</button>
-								</span>
-								&nbsp;&nbsp;&nbsp;
-								<span id="madatory_tools">
-									<button id="mkdir">Create Folder</button>&nbsp;<button id="uzip">Upload Zip</button>&nbsp;<button id="rm">Delete Item(s)</button>
+								<span id="mandatory_tools">
+									<button id="mkdir">Create Folder</button>&nbsp;
+                                    <button id="importzip">Import Zip</button>&nbsp;
+                                    <button id="exportzip">Export Zip</button>&nbsp;
+                                    <button id="rm">Delete Item(s)</button>
 								</span>
 							</div>
 							<div class="cLeft cLM1 fmToolbar">
@@ -34,19 +33,19 @@
 						</div>
 						<div id="fileControl">
 							<div class="cRight fmToolbar">
-								<span id="fileControl_madatory_tools">
+								<span id="fileControl_mandatory_tools">
 									<button id="exitEditor">Close Editor</button>
 								</span>
 							</div>
 							<strong>EDITING&nbsp;FILE:</strong> <span id="fileControl_breadcrumbs">/</span>
 						</div>
 					</div>
-					<div id="dndPanel" data-target="??CURRENT??" data-type="folder" align="left" style="background: #fff;" class="cCenter cW98 cH90 ui-widget ui-state-default ui-corner-all">
+					<div id="dndPanel" data-target="" data-type="folder" align="left" style="background: #fff;" class="cCenter cW98 cH90 ui-widget ui-state-default ui-corner-all">
 						<div id="listing" class="scrollablePane cH95 cW98">
 							
 						</div>
 					</div>
-					<div id="editPanel" data-target="??CURRENT??" data-type="folder" align="left" class="cCenter cW98 cH90">
+					<div id="editPanel" data-target="" data-type="folder" align="left" class="cCenter cW98 cH90">
 						<iframe id="editing" width="100%" height="100%" src="about:blank" class="ui-widget ui-state-default ui-corner-all"></iframe>
 					</div>
 				</div>
@@ -54,12 +53,11 @@
 			</div>
 		</div>
 		<div class="cHidden">
-			<div id="uploadFileHidden" style="display:none;">
-				<form id="uploadFileForm" method="POST" enctype="multipart/form-data" target="uploadFileIframe" action="">
-					<input type="hidden" name="expand" value="true"/>
-					<input id="uploadFileInput" type="file" name="files" onchange="this.form.submit()"/>
+			<div id="zipFileHidden" style="display:none;">
+				<form id="zipFileForm" method="POST" enctype="multipart/form-data" target="zipFileIframe">
+					<input id="zipFileInput" type="file" name="files" onchange="this.form.submit(); reloadFolder();"/>
 				</form>
-				<iframe id="uploadFileIframe" name="uploadFileIframe" src="about:blank" width="100%" height="70px" onload="checkResults(this)"></iframe>
+				<iframe id="zipFileIframe" name="zipFileIframe" src="about:blank" width="100%" height="70px"></iframe>
 			</div>
 			<div id="errorDialog" title="Oops! An Error Has Occured..." class="cTxtLeft">
 				<p class="ui-state-error ui-corner-all cP1">
@@ -78,7 +76,6 @@
 
 
         <!-- DF FileManager -->
-        <script src="js/jquery.dfdropfiles.js"></script>
         <script src="js/filemanagement.js"></script>
 	</body>
 </html>
