Added options for sql db schema.

--- a/services.html
+++ b/services.html
@@ -69,7 +69,9 @@
                                         <option value="Local File Storage">Local File Storage</option>
                                         <option value="Remote File Storage">Remote File Storage</option>
                                         <option value="Local SQL DB">Local SQL DB</option>
+                                        <option value="Local SQL DB Schema">Local SQL DB Schema</option>
                                         <option value="Remote SQL DB">Remote SQL DB</option>
+                                        <option value="Remote SQL DB Schema">Remote SQL DB Schema</option>
 										<option value="Remote Web Service">Remote Web Service</option>
                                         <option value="Local Email Service">Local Email Service</option>
                                         <option value="Remote Email Service">Remote Email Service</option>
